[package]
name = "noveldown"
authors = ["potatoeggy"]
description = "Webnovel EPUB downloader"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/potatoeggy/noveldown-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0", features = ["derive"]}